--- a/AndroidClockDemo-master/app/src/main/res/layout/activity_main.xml
+++ b/AndroidClockDemo-master/app/src/main/res/layout/activity_main.xml
@@ -14,34 +14,41 @@
         android:src="@drawable/bac_1"
         android:scaleType="fitXY"/> -->
 
-    <TextView
-        android:id="@+id/txt"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/colorPrimary"
-        android:textSize="75pt"/>
+  <TextView
+      android:id="@+id/txt"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="center"
+      android:textColor="@color/colorPrimary"
+      android:textSize="36sp" />
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp"
-        android:onClick="show"
-        android:textColor="@color/colorPrimary"
-        android:textSize="13pt" />
-
-  <Button
-      android:id="@+id/button"
+  <TextView
+      android:id="@+id/date"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="250dp"
-      android:layout_marginTop="350dp"
+      android:layout_marginLeft="100dp"
+      android:layout_marginTop="230dp"
+      android:onClick="show"
+      android:textColor="@color/colorPrimary"
+      android:textSize="30sp" />
+
+  <ImageButton
+      android:id="@+id/t2s"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="100dp"
+      android:layout_marginTop="380dp"
+      android:background="@mipmap/t2s"
       android:onClick="butspeak"
       android:text="Speak Date and Time" />
+
+  <ImageButton
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="200dp"
+      android:layout_marginTop="380dp"
+      android:background="@mipmap/alarm"
+      />
 
 
 
