--- a/cycle 2/AndroidClockDemo-master/app/src/main/res/layout/activity_main.xml
+++ b/cycle 2/AndroidClockDemo-master/app/src/main/res/layout/activity_main.xml
@@ -39,16 +39,15 @@
       android:layout_marginLeft="100dp"
       android:layout_marginTop="380dp"
       android:background="@mipmap/t2s"
-      android:onClick="butspeak"
       android:text="Speak Date and Time" />
 
   <ImageButton
+      android:id="@+id/alarmbutton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="200dp"
       android:layout_marginTop="380dp"
-      android:background="@mipmap/alarm"
-      />
+      android:background="@mipmap/alarm" />
 
 
 
