--- a/Tutorial/tutten/app/src/main/res/layout/activity_main.xml
+++ b/Tutorial/tutten/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,16 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/disptime"
-        android:layout_width="fill_parent"
+        android:id="@+id/shwdate"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:textSize="24sp" />
+        android:textSize="24sp"/>
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
+        android:id="@+id/datebtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change Time" />
+        android:text="Change Date"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
