--- a/cycle 2/dialogbox/app/src/main/res/layout/activity_main.xml
+++ b/cycle 2/dialogbox/app/src/main/res/layout/activity_main.xml
@@ -64,16 +64,21 @@
                 android:inputType=""
                 android:hint="Date Of Birth"
                 android:maxLength="12"
-                android:id="@+id/dob"/>
+                android:id="@+id/dob"
+                android:focusable="false"
+                android:focusableInTouchMode="false"/>
         </TableRow>
         <TableRow>
+
             <EditText
+                android:id="@+id/course"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:inputType=""
                 android:hint="Select Course"
+                android:inputType=""
                 android:maxLength="10"
-                android:id="@+id/mobileno"/></TableRow>
+                android:focusable="false"
+                android:focusableInTouchMode="false"/></TableRow>
 
         <TableRow>
 
