--- a/cycle 2/dialogbox/app/src/main/res/layout/activity_main.xml
+++ b/cycle 2/dialogbox/app/src/main/res/layout/activity_main.xml
@@ -5,18 +5,16 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <ImageView android:layout_width="100dp" android:layout_height="100dp"
-        android:foregroundGravity="center_horizontal"
-        android:layout_marginLeft="135dp" android:layout_marginTop="50dp"/>
-
 
     <TextView
-        android:text="Student Registration"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="80dp"
+        android:text="Student Registration"
         android:textSize="24sp"
-        android:gravity="center" android:layout_marginLeft="83dp" app:fontFamily="serif"/>
+        app:fontFamily="serif" />
     <TableLayout
         android:layout_marginTop="40dip"
         android:layout_width="wrap_content"
@@ -25,17 +23,28 @@
 
 
         <TableRow>
+
             <EditText
+                android:id="@+id/name"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="Official Name"
                 android:ems="10"
-                android:maxLength="18"
-                android:id="@+id/name" />
+                android:hint="Official Name"
+                android:inputType="textPersonName"
+                android:maxLength="18" />
         </TableRow>
         <TableRow>
-            <RadioGroup
+
+
+            <EditText
+                android:id="@+id/gender"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Select Gender"
+                android:inputType=""
+                android:focusable="false"
+                android:focusableInTouchMode="false"/>
+         <!--   <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
@@ -55,7 +64,7 @@
 
                     android:text="Female"
                     android:id="@+id/female"/>
-            </RadioGroup>
+            </RadioGroup> -->
         </TableRow>
         <TableRow>
             <EditText
@@ -76,7 +85,6 @@
                 android:layout_height="wrap_content"
                 android:hint="Select Course"
                 android:inputType=""
-                android:maxLength="10"
                 android:focusable="false"
                 android:focusableInTouchMode="false"/></TableRow>
 
@@ -89,8 +97,7 @@
                 android:ems="10"
                 android:imeOptions="actionSearch"
                 android:inputType="textAutoComplete|textAutoCorrect"
-                android:hint="Residence Location"
-                android:textColor="#FFFFFF">
+                android:hint="Residence Location">
                 <requestFocus/>
             </AutoCompleteTextView>
         </TableRow>
